<resources>

    <!--EMAILS-->
    <string-array name="authority_emails">
        <item>shubhamvishwakarma71@gmail.com</item>
        <item>priyanka.lubal33@gmail.com</item>
        <item>madhugore1@gmail.com</item>
    </string-array>

    <!--Menu-->
    <string name="action_upload">Upload</string>

    <!--LoginNavigation-->
    <string name="other">Others</string>
    <string name="aboutApp">About App</string>
    <string name="aboutOffice">About Office</string>

    <!--LoginFragment-->
    <string name="app_name">SPIT</string>
    <string name="login">Sign In</string>
    <string name="signIn">Sign Up</string>
    <string name="bhavans_heading"><b><u>Bhartiya Vidya Bhavan\'s</u></b></string>
    <string name="spit_heading"><b><u>Sardar Patel Institute of Technology</u></b></string>
    <string name="spit"><b><u>Bhartiya Vidya Bhavan\'s\nSardar Patel Institute of Technology</u></b></string>
    <string name="forgotpassword"><u>Forgot Password? Click here</u></string>

    <!--SignInFragment-->
    <string name="name">Name</string>
    <string name="UID">UID</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="department">Department</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm\nPassword\n</string>
    <string name="done">Done</string>

    <string-array name="department_list">
        <item>COMPS</item>
        <item>EXTC</item>
        <item>IT</item>
        <item>ETRX</item>
        <item>MCA</item>
        <item>Office/Faculty</item>
    </string-array>

    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_admin">AdminActivity</string>

    <!--StudentActivity-->
    <string name="welcome">Welcome</string>
    <string name="exam">Examination</string>
    <string name="concession">Concession</string>
    <string name="notice">Notice</string>
    <string name="certificate">Certificate</string>
    <string name="signOut">Sign Out</string>
    <string name="aboutMe">About Me</string>


    <!--Examination Fragment -->
    <string name="examFee">Exam Fees</string>
    <string name="examSchedule">Exam Schedule</string>
    <string name="resultDates">Result Dates</string>

    <!--Bonafide Fragment-->
    <string name="bonafide_title"><u>Bonafide Certificate</u></string>
    <string name="reason_bonafide">Reason for Bonafide</string>
    <string name="apply_bonafide">Apply New</string>
    <string name="bonafide_status">Check Status</string>

    <!--Concession Fragment-->
    <string name="railway_concession"><u>Railway Concession</u></string>
    <string name="from_station">From Station</string>
    <string name="to_station">To Station</string>
    <string name="apply_concession">Apply Concession</string>
    <string name="scholarship"><u>Scholarships</u></string>
    <string name="lines">Lines</string>
    <string name="class_of_travel">Class of Travel</string>
    <string-array name="line_names">
        <item>Central Railway</item>
        <item>Western Railway</item>
        <item>Harbour Railway</item>
        <item>Trans-Harbour Railway</item>
    </string-array>

    <string-array name="central_station_names">
        <item>CST</item>
        <item>Masjid</item>
        <item>Sandhrust Road</item>
        <item>Byculla</item>
        <item>Chinchpokli</item>
        <item>Currey Road</item>
        <item>Parel</item>
        <item>Dadar</item>
        <item>Matunga</item>
        <item>Sion</item>
        <item>Kurla</item>
        <item>Vidyavihar</item>
        <item>Ghatkopar</item>
        <item>Vikhroli</item>
        <item>Kanjur Marg</item>
        <item>Bhandup</item>
        <item>Nahur</item>
        <item>Mulund</item>
        <item>Thane</item>
        <item>Kalva</item>
        <item>Mumbra</item>
        <item>Diva Junction</item>
        <item>Kopar</item>
        <item>Dombilivi</item>
        <item>Thakurli</item>
        <item>Kalyan</item>
        <item>Vithalwadi</item>
        <item>Ulhas Nagar</item>
        <item>Ambernath</item>
        <item>Badlapur</item>
        <item>Vangani</item>
        <item>Shelu</item>
        <item>Neral</item>
        <item>Bhivpuri Road</item>
        <item>Karjat</item>
        <item>Palasdhari</item>
        <item>Kelavli</item>
        <item>Dolavli</item>
        <item>Lowjee</item>
        <item>Khopoli</item>
        <item>Shahad</item>
        <item>Ambivli</item>
        <item>Titwala</item>
        <item>Khadavli</item>
        <item>Vasind</item>
        <item>Asangaon</item>
        <item>Atgaon</item>
        <item>Khardi</item>
        <item>Kasara</item>
    </string-array>

    <string-array name="western_station_names">
        <item>Churchgate</item>
        <item>Marine Lines</item>
        <item>Charni Road</item>
        <item>Grant Road</item>
        <item>Mumbai Central</item>
        <item>Mahalakshmi</item>
        <item>Lower Parel</item>
        <item>Elphinstone Road</item>
        <item>Dadar</item>
        <item>Matunga Road</item>
        <item>Mahim Junction</item>
        <item>Bandra</item>
        <item>Khar Road</item>
        <item>SantaCruz</item>
        <item>Vile Parle</item>
        <item>Andheri</item>
        <item>Jogeshwari</item>
        <item>Goregaon</item>
        <item>Malad</item>
        <item>Kandivali</item>
        <item>Borivali</item>
        <item>Dahisar</item>
        <item>Mira Road</item>
        <item>Bhayander</item>
        <item>Naigaon</item>
        <item>Vasai Road</item>
        <item>Nalla Sopara</item>
        <item>Virar</item>
    </string-array>

    <string-array name="harbour_station_names">
        <item>CST</item>
        <item>Masjid</item>
        <item>Sandhrust Road</item>
        <item>Dockyard Road</item>
        <item>Reay Road</item>
        <item>Cotton Green</item>
        <item>Sewri</item>
        <item>Vadala Road</item>
        <item>Kings Circle</item>
        <item>Mahim Junction</item>
        <item>Bandra</item>
        <item>Khar Road</item>
        <item>SantaCruz</item>
        <item>Vile Parle</item>
        <item>Andheri</item>
        <item>GTB Nagar</item>
        <item>Chunabhatti</item>
        <item>Kurla</item>
        <item>Tilaknagar</item>
        <item>Chembur</item>
        <item>Govandi</item>
        <item>Mankhurd</item>
        <item>Vashi</item>
        <item>Sanpada</item>
        <item>Juinagar</item>
        <item>Nerul</item>
        <item>Seawood Darave</item>
        <item>Belapur CBD</item>
        <item>Kharghar</item>
        <item>Manasarovar</item>
        <item>Khandeshwar</item>
        <item>Panvel</item>
    </string-array>

    <string-array name="trans_station_names">
        <item>Thane</item>
        <item>Airoli</item>
        <item>Rabale</item>
        <item>Ghansoli</item>
        <item>Koparkhairne</item>
        <item>Turbhe</item>
        <item>Sanpada</item>
        <item>Vashi</item>
        <item>Juinagar</item>
        <item>Nerul</item>
        <item>Seawood Darave</item>
        <item>Belapur CBD</item>
        <item>Kharghar</item>
        <item>Manasarovar</item>
        <item>Khandeshwar</item>
        <item>Panvel</item>
    </string-array>

    <string-array name="travel_class">
        <item>First Class</item>
        <item>Second Class</item>
    </string-array>

    <!--AboutOfficeFragment-->
    <string name="about_office_details">
        Address:\n
        Room No. 006,\n
        Bharatiya Vidya Bhavan\'s\n
        Sardar Patel Institute of Technology\n
        Bhavan’s Campus, Munshi Nagar,\n
        Andheri (West), Mumbai 400 058\n
        Phone: (+91) - (022) - 26707440 / 26287250\n
        Timings: 9:00 AM to 5:00 PM\n</string>
    <string name="spit_website"><u>www.spit.ac.in</u></string>


    <!--AboutAppFragment-->
    <string name="about_app_details">\n\n
        SPIT Office is an app where you can find everything\n about college.
        I consists of all features that are \n
        currently seen on the official website.\n\n
        There is a general notice section which can be used \n
        by the office staff to communicate any general \n
        announcements to be made. A separate examination\n
        notice section has been incorporated in this app.\n\n
        Also, the application for the railway concession and \n
        bonafied certicate can be made through this app.\n\n
        This app imposes restrictions on access rights for \n
        the users of this app which lie solely with the \n
        administrator. \n</string>
    <string name="about_app_developers">
        \n\nDevelopers\n
        SPIT COMPS\n
    </string>
    <string name="submit_feedback">Submit</string>

    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--ForgotPasswordFragment-->
    <string name="forgotpasswordsteps">
         1. Enter a valid email id below\n
        2. You will receive an email for resetting password.\n
        3. Change your password.\n
    </string>
    <string name="send_forgot_password">Reset Password</string>

    <!--AdminActivity-->
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="date_title">Date: </string>
    <string name="date">DD/MM/YYYY</string>

    <string-array name="category_list">
        <item>Notice</item>
        <item>Examination</item>
    </string-array>
    <string name="selected_document">File</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
