<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_student"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/action_bar_padding_top"
tools:context="fragments.ConcessionFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spit1"/>
        <TextView
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spit"
            android:textSize="17dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/railway_concession"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/lines"
            android:textSize="19sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/textView"/>

        <Spinner
            android:id="@+id/lines_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/line_names"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textAlignment="center">
        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_of_travel"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/class_of_travel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/travel_class"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textAlignment="center">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/from_station"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/from_station_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textAlignment="center">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_station"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/to_station_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Andheri"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center">
        </TextView>

    </LinearLayout>


    <Button
        android:id="@+id/apply_concession_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_concession"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"/>

    <Button
        android:id="@+id/scholarship_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/scholarship"
        android:textSize="15sp"
        android:textColor="#0000ff"
        android:background="@android:color/transparent"/>

</LinearLayout>
</ScrollView>