<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/my_custom_height"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_view_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/my_custom_height"
        android:src="@drawable/download_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:id="@+id/list_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/list_view_description"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:layout_weight="1"
                android:maxLines="1"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/listViewDate_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_title"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/listViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>