<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/action_bar_padding_top"
    tools:context="fragments.CertificateFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spit1"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spit"
                android:textSize="17dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonafide_title"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/reason_bonafide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason_bonafide"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:paddingBottom="15dp"
            />

        <Button
            android:id="@+id/apply_bonafide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_bonafide"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</ScrollView>