<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/action_bar_padding_top"
    tools:context="fragments.NoticeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spit1"
                android:contentDescription="SPIT"/>
            <TextView
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spit"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_details"
            android:textColor="@android:color/background_dark"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_developers"
            android:textColor="@android:color/background_dark"/>

        <EditText
            android:id="@+id/submit_feedback_text"
            android:paddingTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Feedback/Problem"
            android:textColorHint="@color/colorAccent"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/submit_feedback_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_feedback"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>